--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en" >
 <head>
   <meta charset="UTF-8">
-  <title>CodePen - Radio Button Dot-Slider (Pure CSS)</title>
+  <title>DB - BDSM Test</title>
   <link rel='stylesheet' href='https://fonts.googleapis.com/css?family=Nunito:400,600,800'>
 <link rel='stylesheet' href='https://pro.fontawesome.com/releases/v5.4.1/css/all.css'><link rel="stylesheet" href="./style.css">
 
