--- a/results.html
+++ b/results.html
@@ -49,7 +49,7 @@
                     <a class="nav-link" href="https://deviantbound.com">Join Our Community</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="https://bdsmlist.deviantbound.com/">BDSM List</a>
+                    <a class="nav-link" href="https://kinklist.deviantbound.com/">Kink List</a>
                 </li>
                 <li class="nav-item dropdown">
                     <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" data-toggle="dropdown"
